--- a/www/perl.html
+++ b/www/perl.html
@@ -887,20 +887,6 @@ And here is a list of all the image attributes you can set:<br>
   <td>set the image border color</td>
  </tr>
   <tr>
- <td>cache-threshold</td>
-  <td><i>geometry</i></td>
-  <td>Image pixels are stored in memory until your computers memory is
-consumed. Subsequent pixel operations are cached to disk. Operations
-to memory are significantly faster but if your computer does not have a
-sufficient amount of free memory you may want to set this threshold to
-a small megabyte value (e.g. 8). You can also set a maximum cache threshold.
-When this value is exceeded, an image will fail to read or write. For example,
-cache-threshold->100x500, means cache to disk when one or more images consume
-more than 100mb of memory or disk and stop processing all images once the
-500mb threshold is met.
-</td>
- </tr>
-  <tr>
  <td>clip-mask</td>
   <td><i>image</i></td>
   <td>Associate a clip mask with the image.</td>
@@ -939,6 +925,11 @@ next image in a sequence</td>
  <td>density</td>
   <td><i>geometry</i></td>
   <td>vertical and horizontal resolution in pixels of the image</td>
+ </tr>
+  <tr>
+ <td>disk-limit</td>
+  <td><i>integer</i></td>
+  <td>set disk resource limit in megabytes</td>
  </tr>
   <tr>
  <td>dispose</td>
@@ -1034,6 +1025,16 @@ next image in a sequence</td>
  <td>mattecolor</td>
   <td><i><a href="color.html">color name</a></i></td>
   <td>set the image matte color</td>
+ </tr>
+  <tr>
+ <td>map-limit</td>
+  <td><i>integer</i></td>
+  <td>set map resource limit in megabytes</td>
+ </tr>
+  <tr>
+ <td>memory-limit</td>
+  <td><i>integer</i></td>
+  <td>set memory resource limit in megabytes</td>
  </tr>
   <tr>
  <td>monochrome</td>
