removed Z input from chromaticity options.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -547,7 +547,7 @@ section of <em>X(1)</em>.</font></td></tr></table>
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="details-blue-primary"></a>-blue-primary <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a name="details-blue-primary"></a>-blue-primary <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blue chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -1938,7 +1938,7 @@ for this purpose.
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="details-green-primary"></a>-green-primary <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a name="details-green-primary"></a>-green-primary <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>green chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -2839,7 +2839,7 @@ Use <strong>-raise</strong> to create a raised effect, otherwise use <strong>+ra
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="details-red-primary"></a>-red-primary <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a name="details-red-primary"></a>-red-primary <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>red chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -3796,7 +3796,7 @@ of the wave.
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="details-white-point"></a>-white-point <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a name="details-white-point"></a>-white-point <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>chromaticity white point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
