--- a/www/montage.html
+++ b/www/montage.html
@@ -279,7 +279,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-blue-primary">-blue-primary</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-blue-primary">-blue-primary</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blue chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -587,7 +587,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-green-primary">-green-primary</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-green-primary">-green-primary</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>green chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -730,7 +730,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-red-primary">-red-primary</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-red-primary">-red-primary</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>red chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -939,7 +939,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-white-point">-white-point</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-white-point">-white-point</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>chromaticity white point</td></tr></table>
 <p>
