--- a/www/composite.html
+++ b/www/composite.html
@@ -203,7 +203,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-blue-primary">-blue-primary</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-blue-primary">-blue-primary</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blue chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -434,7 +434,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-green-primary">-green-primary</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-green-primary">-green-primary</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>green chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -544,7 +544,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-red-primary">-red-primary</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-red-primary">-red-primary</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>red chromaticity primary point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -731,7 +731,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-white-point">-white-point</a> <i>&lt;X&gt;,&lt;Y&gt;,&lt;Z&gt;</i>
+    <a href="ImageMagick.html#details-white-point">-white-point</a> <i>&lt;x&gt;,&lt;y&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>chromaticity white point</td></tr></table>
 <table BORDER=0 WIDTH="94%">
