documented the "event-mask" parameter of the debug option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1027,9 +1027,20 @@ shifted.
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    -debug
+    -debug <i>&lt;event-mask&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>enable debug printout</td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+The <tt>event-mask</tt> specifies which events are to be logged.  It
+can be either <tt>NoEvents</tt>, <tt>AllEvents</tt>, or a mask constructed
+by the union of one or more of <tt>ConfigureEvent</tt>, <tt>AnnotateEvent</tt>,
+<tt>RenderEvent</tt>, <tt>LocaleEvent</tt>, <tt>CoderEvent</tt>,
+<tt>X11Event</tt>, <tt>CacheEvent</tt>, or <tt>BlobEvent</tt>, using quotation
+marks to hide the OR symbol.  For example, to log cache and blob events,
+use</font></td></tr></table>
+<pre>
+    convert -debug "CacheEvent|BlobEvent" rose: rose.png
+</pre>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
