--- a/www/import.html
+++ b/www/import.html
@@ -246,7 +246,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    -debug <i>&lt;event-mask&gt;</i>
+    -debug <i>&lt;events&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>enable debug printout</td></tr></table>
 <table BORDER=0 WIDTH="94%">
