--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1032,15 +1032,17 @@ width=15><b><font face="Helvetica, Arial"
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>enable debug printout</td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 The <tt>events</tt> parameter specifies which events are to be logged.  It
-can be either <tt>None</tt>, <tt>All</tt>, or a list consisting of
+can be either <tt>None</tt>, <tt>All</tt>, or a comma-separated list
+consisting of
 one or more of <tt>Configure</tt>, <tt>Annotate</tt>,
 <tt>Render</tt>, <tt>Locale</tt>, <tt>Coder</tt>,
-<tt>X11</tt>, <tt>Cache</tt>, or <tt>Blob</tt>, using whatever punctuation
-you like to separate them.  For example, to log cache and blob events,
-use</font></td></tr></table>
+<tt>X11</tt>, <tt>Cache</tt>, or <tt>Blob</tt>.
+For example, to log cache and blob events, use</font></td></tr></table>
 <pre>
-    convert -debug "Cache, Blob" rose: rose.png
+    convert -debug "Cache,Blob" rose: rose.png
 </pre>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+Use <strong>+debug</strong> to turn off all logging.</font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
