--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,15 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-10--1  Bob Friesenhahn &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Added draw.h "DrawGet" equivalents to most of the "DrawSet"
+    functions.
+  * Added an array size argument to DrawSetDashPattern and got
+    rid of the zero-termination garbage.
+  o Remove 'Set' from the names of draw.h functions which update
+    the current affine transformation array (e.g. DrawSetRotate
+    becomes DrawRotate).
+
 2002-09-29  Bob Friesenhahn &lt;bfriesen@simple.dallas.tx.us&gt;
   * Updated to Automake 1.7.
 
