*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -710,7 +710,7 @@ and identifying units that are homogeneous</td>
   <tr>
  <td>Shade</td>
   <td>geometry=&gt;<i>geometry</i>, azimuth=&gt;<i>double</i>, elevation=&gt;<i>
-double</i>, color=&gt;{true, false}&nbsp;</td>
+double</i>, gray=&gt;{true, false}&nbsp;</td>
   <td>shade the image using a distant light source</td>
  </tr>
   <tr>
